@@ -1,3 +1,9 @@
+Next Release
+
+  - Supervisorctl now reports a better error message when the main
+    supervisor XML-RPC namespace is not registered.  Thanks to
+    Mike Orr for reporting this. (Mike Naberezny)
+
 3.0a2
 
   - Fixed the README.txt example for defining the supervisor RPC
